Day 24: Win32 Platform Layer Cleanup
Also use build/ folder instead of the root directory for building.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,4 @@
 .build/
-foo.hmi
-handmade.dll
-handmade.exp
-handmade.lib
-handmade.pdb
-handmade_temp.dll
+build/
+*.hmi
 test.out
-win32_handmade.exe
-win32_handmade.pdb
